Fixes and Update

--- a/index.html
+++ b/index.html
@@ -401,9 +401,9 @@
 			  tickerCode = "DVC";
 			}
 			else if (document.getElementById("customCoinName").value == "note") {
-			  document.getElementById("coinjs_pub").value = "0x1f";
-			  document.getElementById("coinjs_priv").value = "0x9f";
-			  document.getElementById("coinjs_multisig").value = "0x6";
+			  document.getElementById("coinjs_pub").value = "0x3f";
+			  document.getElementById("coinjs_priv").value = "0xbf";
+			  document.getElementById("coinjs_multisig").value = "0x7d";
 			  document.getElementById("coinLogo").src = "images/logo/note.png";
 			  document.getElementById("bTtitle").textContent = "DNotes";
 			  document.getElementById("bTtitle1").textContent = "DNotes";
@@ -781,7 +781,7 @@
 			else if (document.getElementById("customCoinName").value == "erc") {
 			  document.getElementById("coinjs_pub").value = "0x21";
 			  document.getElementById("coinjs_priv").value = "0xa1";
-			  document.getElementById("coinjs_multisig").value = "";
+			  document.getElementById("coinjs_multisig").value = "0x5";
 			  document.getElementById("coinLogo").src = "images/logo/erc.png";
 			  document.getElementById("bTtitle").textContent = "Europecoin";
 			  document.getElementById("bTtitle1").textContent = "Europecoin";
@@ -1040,6 +1040,150 @@
 			  document.getElementById("bTtitle").textContent = "Mintcoin";
 			  document.getElementById("bTtitle1").textContent = "Mintcoin";
 			  tickerCode = "Mint";
+			}
+			else if (document.getElementById("customCoinName").value == "aias") {
+			  document.getElementById("coinjs_pub").value = "0x17";
+			  document.getElementById("coinjs_priv").value = "0x97";
+			  document.getElementById("coinjs_multisig").value = "0x53";
+			  document.getElementById("coinLogo").src = "images/logo/aias.png";
+			  document.getElementById("bTtitle").textContent = "Aias";
+			  document.getElementById("bTtitle1").textContent = "Aias";
+			  tickerCode = "AIAS";
+			}
+			else if (document.getElementById("customCoinName").value == "arepa") {
+			  document.getElementById("coinjs_pub").value = "0x17";
+			  document.getElementById("coinjs_priv").value = "0x97";
+			  document.getElementById("coinjs_multisig").value = "0x55";
+			  document.getElementById("coinLogo").src = "images/logo/arepa.png";
+			  document.getElementById("bTtitle").textContent = "Arepacoin";
+			  document.getElementById("bTtitle1").textContent = "Arepacoin";
+			  tickerCode = "AREPA";
+			}
+			else if (document.getElementById("customCoinName").value == "agnt") {
+			  document.getElementById("coinjs_pub").value = "0x17";
+			  document.getElementById("coinjs_priv").value = "0x97";
+			  document.getElementById("coinjs_multisig").value = "0x5";
+			  document.getElementById("coinLogo").src = "images/logo/agnt.png";
+			  document.getElementById("bTtitle").textContent = "ArgentumNT";
+			  document.getElementById("bTtitle1").textContent = "ArgentumNT";
+			  tickerCode = "AGNT";
+			}
+			else if (document.getElementById("customCoinName").value == "ari") {
+			  document.getElementById("coinjs_pub").value = "0xb";
+			  document.getElementById("coinjs_priv").value = "0x8b";
+			  document.getElementById("coinjs_multisig").value = "0xc4";
+			  document.getElementById("coinLogo").src = "images/logo/ari.png";
+			  document.getElementById("bTtitle").textContent = "Aricoin";
+			  document.getElementById("bTtitle1").textContent = "Aricoin";
+			  tickerCode = "ARI";
+			}
+			else if (document.getElementById("customCoinName").value == "ari") {
+			  document.getElementById("coinjs_pub").value = "0x17";
+			  document.getElementById("coinjs_priv").value = "0x97";
+			  document.getElementById("coinjs_multisig").value = "0x7d";
+			  document.getElementById("coinLogo").src = "images/logo/ari.png";
+			  document.getElementById("bTtitle").textContent = "Audiocoin";
+			  document.getElementById("bTtitle1").textContent = "Audiocoin";
+			  tickerCode = "ARI";
+			}
+			else if (document.getElementById("customCoinName").value == "b3") {
+			  document.getElementById("coinjs_pub").value = "0x3f";
+			  document.getElementById("coinjs_priv").value = "0x97";
+			  document.getElementById("coinjs_multisig").value = "0x55";
+			  document.getElementById("coinLogo").src = "images/logo/b3.png";
+			  document.getElementById("bTtitle").textContent = "B3Coin";
+			  document.getElementById("bTtitle1").textContent = "B3Coin";
+			  tickerCode = "B3";
+			}
+			else if (document.getElementById("customCoinName").value == "bzc") {
+			  document.getElementById("coinjs_pub").value = "0x1c";
+			  document.getElementById("coinjs_priv").value = "0x1c";
+			  document.getElementById("coinjs_multisig").value = "0x80";
+			  document.getElementById("coinLogo").src = "images/logo/bzc.png";
+			  document.getElementById("bTtitle").textContent = "Bitzec";
+			  document.getElementById("bTtitle1").textContent = "Bitzec";
+			  tickerCode = "bzc";
+			}
+			else if (document.getElementById("customCoinName").value == "bean") {
+			  document.getElementById("coinjs_pub").value = "0x3";
+			  document.getElementById("coinjs_priv").value = "0x55";
+			  document.getElementById("coinjs_multisig").value = "0x97";
+			  document.getElementById("coinLogo").src = "images/logo/bean.png";
+			  document.getElementById("bTtitle").textContent = "Bean Cash";
+			  document.getElementById("bTtitle1").textContent = "Bean Cash";
+			  tickerCode = "bean";
+			}
+			else if (document.getElementById("customCoinName").value == "bnode") {
+			  document.getElementById("coinjs_pub").value = "0x19";
+			  document.getElementById("coinjs_priv").value = "0x1b";
+			  document.getElementById("coinjs_multisig").value = "0x8";
+			  document.getElementById("coinLogo").src = "images/logo/bnode.png";
+			  document.getElementById("bTtitle").textContent = "Beenode";
+			  document.getElementById("bTtitle1").textContent = "Beenode";
+			  tickerCode = "BNODE";
+			}
+			else if (document.getElementById("customCoinName").value == "kng") {
+			  document.getElementById("coinjs_pub").value = "0x4b";
+			  document.getElementById("coinjs_priv").value = "0xcb";
+			  document.getElementById("coinjs_multisig").value = "0x5";
+			  document.getElementById("coinLogo").src = "images/logo/kng.png";
+			  document.getElementById("bTtitle").textContent = "BetKings";
+			  document.getElementById("bTtitle1").textContent = "BetKings";
+			  tickerCode = "KNG";
+			}
+			else if (document.getElementById("customCoinName").value == "biid") {
+			  document.getElementById("coinjs_pub").value = "0x19";
+			  document.getElementById("coinjs_priv").value = "0x99";
+			  document.getElementById("coinjs_multisig").value = "0x55";
+			  document.getElementById("coinLogo").src = "images/logo/biid.png";
+			  document.getElementById("bTtitle").textContent = "Biidcoin";
+			  document.getElementById("bTtitle1").textContent = "Biidcoin";
+			  tickerCode = "BIID";
+			}
+			else if (document.getElementById("customCoinName").value == "bay") {
+			  document.getElementById("coinjs_pub").value = "0x19";
+			  document.getElementById("coinjs_priv").value = "0x99";
+			  document.getElementById("coinjs_multisig").value = "0x55";
+			  document.getElementById("coinLogo").src = "images/logo/bay.png";
+			  document.getElementById("bTtitle").textContent = "BitBay";
+			  document.getElementById("bTtitle1").textContent = "BitBay";
+			  tickerCode = "BAY";
+			}
+			else if (document.getElementById("customCoinName").value == "xbc") {
+			  document.getElementById("coinjs_pub").value = "0x19";
+			  document.getElementById("coinjs_priv").value = "0x99";
+			  document.getElementById("coinjs_multisig").value = "0x8";
+			  document.getElementById("coinLogo").src = "images/logo/xbc.png";
+			  document.getElementById("bTtitle").textContent = "BitcoinPlus";
+			  document.getElementById("bTtitle1").textContent = "BitcoinPlus";
+			  tickerCode = "XBC";
+			}
+			else if (document.getElementById("customCoinName").value == "bzx") {
+			  document.getElementById("coinjs_pub").value = "0x0";
+			  document.getElementById("coinjs_priv").value = "0x80";
+			  document.getElementById("coinjs_multisig").value = "0x5";
+			  document.getElementById("coinLogo").src = "images/logo/bzx.png";
+			  document.getElementById("bTtitle").textContent = "BitcoinZero";
+			  document.getElementById("bTtitle1").textContent = "BitcoinZero";
+			  tickerCode = "BZX";
+			}
+			else if (document.getElementById("customCoinName").value == "bccx") {
+			  document.getElementById("coinjs_pub").value = "0x4b";
+			  document.getElementById("coinjs_priv").value = "0xcb";
+			  document.getElementById("coinjs_multisig").value = "0x55";
+			  document.getElementById("coinLogo").src = "images/logo/bccx.png";
+			  document.getElementById("bTtitle").textContent = "Bitconnect X";
+			  document.getElementById("bTtitle1").textContent = "Bitconnect X";
+			  tickerCode = "BCCX";
+			}
+			else if (document.getElementById("customCoinName").value == "marks") {
+			  document.getElementById("coinjs_pub").value = "0x55";
+			  document.getElementById("coinjs_priv").value = "0xd5";
+			  document.getElementById("coinjs_multisig").value = "0x5";
+			  document.getElementById("coinLogo").src = "images/logo/marks.png";
+			  document.getElementById("bTtitle").textContent = "Bitmarks";
+			  document.getElementById("bTtitle1").textContent = "Bitmarks";
+			  tickerCode = "MARKS";
 			}
 		  else {
 				document.getElementById("xfeeTicker").textContent = document.getElementById("customCoinName").value
