--- a/index.html
+++ b/index.html
@@ -1077,14 +1077,14 @@
 			  document.getElementById("bTtitle1").textContent = "Aricoin";
 			  tickerCode = "ARI";
 			}
-			else if (document.getElementById("customCoinName").value == "ari") {
+			else if (document.getElementById("customCoinName").value == "adc") {
 			  document.getElementById("coinjs_pub").value = "0x17";
 			  document.getElementById("coinjs_priv").value = "0x97";
 			  document.getElementById("coinjs_multisig").value = "0x7d";
-			  document.getElementById("coinLogo").src = "images/logo/ari.png";
+			  document.getElementById("coinLogo").src = "images/logo/adc.png";
 			  document.getElementById("bTtitle").textContent = "Audiocoin";
 			  document.getElementById("bTtitle1").textContent = "Audiocoin";
-			  tickerCode = "ARI";
+			  tickerCode = "ADC";
 			}
 			else if (document.getElementById("customCoinName").value == "b3") {
 			  document.getElementById("coinjs_pub").value = "0x3f";
@@ -1184,6 +1184,278 @@
 			  document.getElementById("bTtitle").textContent = "Bitmarks";
 			  document.getElementById("bTtitle1").textContent = "Bitmarks";
 			  tickerCode = "MARKS";
+			}
+			else if (document.getElementById("customCoinName").value == "bro") {
+			  document.getElementById("coinjs_pub").value = "0x1a";
+			  document.getElementById("coinjs_priv").value = "0x80";
+			  document.getElementById("coinjs_multisig").value = "0x66";
+			  document.getElementById("coinLogo").src = "images/logo/bro.png";
+			  document.getElementById("bTtitle").textContent = "Bitradio";
+			  document.getElementById("bTtitle1").textContent = "Bitradio";
+			  tickerCode = "BRO";
+			}
+			else if (document.getElementById("customCoinName").value == "bsx") {
+			  document.getElementById("coinjs_pub").value = "0x19";
+			  document.getElementById("coinjs_priv").value = "0x99";
+			  document.getElementById("coinjs_multisig").value = "0x29";
+			  document.getElementById("coinLogo").src = "images/logo/bsx.png";
+			  document.getElementById("bTtitle").textContent = "Bitspace";
+			  document.getElementById("bTtitle1").textContent = "Bitspace";
+			  tickerCode = "BSX";
+			}
+			else if (document.getElementById("customCoinName").value == "swift") {
+			  document.getElementById("coinjs_pub").value = "0x55";
+			  document.getElementById("coinjs_priv").value = "0xd5";
+			  document.getElementById("coinjs_multisig").value = "0x1c";
+			  document.getElementById("coinLogo").src = "images/logo/swift.png";
+			  document.getElementById("bTtitle").textContent = "Bitswift";
+			  document.getElementById("bTtitle1").textContent = "Bitswift";
+			  tickerCode = "SWIFT";
+			}
+			else if (document.getElementById("customCoinName").value == "bbtc") {
+			  document.getElementById("coinjs_pub").value = "0xf3";
+			  document.getElementById("coinjs_priv").value = "0x173";
+			  document.getElementById("coinjs_multisig").value = "0x7";
+			  document.getElementById("coinLogo").src = "images/logo/bbtc.png";
+			  document.getElementById("bTtitle").textContent = "BlakeBitcoin";
+			  document.getElementById("bTtitle1").textContent = "BlakeBitcoin";
+			  tickerCode = "BBTC";
+			}
+			else if (document.getElementById("customCoinName").value == "blc") {
+			  document.getElementById("coinjs_pub").value = "0x1a";
+			  document.getElementById("coinjs_priv").value = "0x9a";
+			  document.getElementById("coinjs_multisig").value = "0x7";
+			  document.getElementById("coinLogo").src = "images/logo/blc.png";
+			  document.getElementById("bTtitle").textContent = "Blakecoin";
+			  document.getElementById("bTtitle1").textContent = "Blakecoin";
+			  tickerCode = "BLC";
+			}
+			else if (document.getElementById("customCoinName").value == "blitz") {
+			  document.getElementById("coinjs_pub").value = "0x73";
+			  document.getElementById("coinjs_priv").value = "0xf3";
+			  document.getElementById("coinjs_multisig").value = "0x55";
+			  document.getElementById("coinLogo").src = "images/logo/blitz.png";
+			  document.getElementById("bTtitle").textContent = "Blitzcash";
+			  document.getElementById("bTtitle1").textContent = "Blitzcash";
+			  tickerCode = "BLITZ";
+			}
+			else if (document.getElementById("customCoinName").value == "blu") {
+			  document.getElementById("coinjs_pub").value = "0x1a";
+			  document.getElementById("coinjs_priv").value = "0xb0";
+			  document.getElementById("coinjs_multisig").value = "0x1c";
+			  document.getElementById("coinLogo").src = "images/logo/blu.png";
+			  document.getElementById("bTtitle").textContent = "Bluecoin";
+			  document.getElementById("bTtitle1").textContent = "Bluecoin";
+			  tickerCode = "BLU";
+			}
+			else if (document.getElementById("customCoinName").value == "caps") {
+			  document.getElementById("coinjs_pub").value = "0x22";
+			  document.getElementById("coinjs_priv").value = "0xa2";
+			  document.getElementById("coinjs_multisig").value = "0x8";
+			  document.getElementById("coinLogo").src = "images/logo/caps.png";
+			  document.getElementById("bTtitle").textContent = "BottleCapsPlus";
+			  document.getElementById("bTtitle1").textContent = "BottleCapsPlus";
+			  tickerCode = "CAPS";
+			}
+			else if (document.getElementById("customCoinName").value == "talk") {
+			  document.getElementById("coinjs_pub").value = "0x1c";
+			  document.getElementById("coinjs_priv").value = "0x9c";
+			  document.getElementById("coinjs_multisig").value = "0x8";
+			  document.getElementById("coinLogo").src = "images/logo/talk.png";
+			  document.getElementById("bTtitle").textContent = "BTCTalkCoin";
+			  document.getElementById("bTtitle1").textContent = "BTCTalkCoin";
+			  tickerCode = "TALK";
+			}
+			else if (document.getElementById("customCoinName").value == "bzl") {
+			  document.getElementById("coinjs_pub").value = "0x19";
+			  document.getElementById("coinjs_priv").value = "0x99";
+			  document.getElementById("coinjs_multisig").value = "0x55";
+			  document.getElementById("coinLogo").src = "images/logo/bzl.png";
+			  document.getElementById("bTtitle").textContent = "BZLCoin";
+			  document.getElementById("bTtitle1").textContent = "BZLCoin";
+			  tickerCode = "BZL";
+			}
+			else if (document.getElementById("customCoinName").value == "ari") {
+			  document.getElementById("coinjs_pub").value = "0xb";
+			  document.getElementById("coinjs_priv").value = "0x9e";
+			  document.getElementById("coinjs_multisig").value = "0x16";
+			  document.getElementById("coinLogo").src = "images/logo/ari.png";
+			  document.getElementById("bTtitle").textContent = "Aricoin";
+			  document.getElementById("bTtitle1").textContent = "Aricoin";
+			  tickerCode = "ARI";
+			}
+			else if (document.getElementById("customCoinName").value == "bcz") {
+			  document.getElementById("coinjs_pub").value = "0x19";
+			  document.getElementById("coinjs_priv").value = "0xd2";
+			  document.getElementById("coinjs_multisig").value = "0x14";
+			  document.getElementById("coinLogo").src = "images/logo/bcz.png";
+			  document.getElementById("bTtitle").textContent = "Bczcoin";
+			  document.getElementById("bTtitle1").textContent = "Bczcoin";
+			  tickerCode = "BCZ";
+			}
+			else if (document.getElementById("customCoinName").value == "chbt") {
+			  document.getElementById("coinjs_pub").value = "";
+			  document.getElementById("coinjs_priv").value = "";
+			  document.getElementById("coinjs_multisig").value = "";
+			  document.getElementById("coinLogo").src = "images/logo/chbt.png";
+			  document.getElementById("bTtitle").textContent = "CHBToken";
+			  document.getElementById("bTtitle1").textContent = "CHBToken";
+			  tickerCode = "CHBT";
+			}
+			else if (document.getElementById("customCoinName").value == "cno") {
+			  document.getElementById("coinjs_pub").value = "0x44";
+			  document.getElementById("coinjs_priv").value = "0xc4";
+			  document.getElementById("coinjs_multisig").value = "0x5";
+			  document.getElementById("coinLogo").src = "images/logo/cno.png";
+			  document.getElementById("bTtitle").textContent = "Coino";
+			  document.getElementById("bTtitle1").textContent = "Coino";
+			  tickerCode = "CNO";
+			}
+			else if (document.getElementById("customCoinName").value == "cmm") {
+			  document.getElementById("coinjs_pub").value = "0x1c";
+			  document.getElementById("coinjs_priv").value = "0x8c";
+			  document.getElementById("coinjs_multisig").value = "0x33";
+			  document.getElementById("coinLogo").src = "images/logo/cmm.png";
+			  document.getElementById("bTtitle").textContent = "Commercium";
+			  document.getElementById("bTtitle1").textContent = "Commercium";
+			  tickerCode = "CMM";
+			}
+			else if (document.getElementById("customCoinName").value == "crown") {
+				//base58Prefixes[PUBKEY_ADDRESS] = list_of(0x01)(0x75)(0x07).convert_to_container<std::vector<unsigned char> >();
+			  document.getElementById("coinjs_pub").value = "0x01";
+			  //base58Prefixes[SCRIPT_ADDRESS] = list_of(0x01)(0x74)(0xF1).convert_to_container<std::vector<unsigned char> >();
+				document.getElementById("coinjs_priv").value = "0x80";
+			  document.getElementById("coinjs_multisig").value = "0x01";
+			  document.getElementById("coinLogo").src = "images/logo/crw.png";
+			  document.getElementById("bTtitle").textContent = "Crown";
+			  document.getElementById("bTtitle1").textContent = "Crown";
+			  tickerCode = "CRW";
+			}
+			else if (document.getElementById("customCoinName").value == "crypt") {
+			  document.getElementById("coinjs_pub").value = "0x22";
+			  document.getElementById("coinjs_priv").value = "0xa2";
+			  document.getElementById("coinjs_multisig").value = "0x1c";
+			  document.getElementById("coinLogo").src = "images/logo/crypt.png";
+			  document.getElementById("bTtitle").textContent = "Cryptcoin";
+			  document.getElementById("bTtitle1").textContent = "Cryptcoin";
+			  tickerCode = "CRYPT";
+			}
+			else if (document.getElementById("customCoinName").value == "buk2") {
+			  document.getElementById("coinjs_pub").value = "0x5";
+			  document.getElementById("coinjs_priv").value = "0x85";
+			  document.getElementById("coinjs_multisig").value = "0x8";
+			  document.getElementById("coinLogo").src = "images/logo/buk2.png";
+			  document.getElementById("bTtitle").textContent = "CryptoBuck2";
+			  document.getElementById("bTtitle1").textContent = "CryptoBuck2";
+			  tickerCode = "BUK2";
+			}
+			else if (document.getElementById("customCoinName").value == "qbt") {
+			  document.getElementById("coinjs_pub").value = "0x1c";
+			  document.getElementById("coinjs_priv").value = "0x9c";
+			  document.getElementById("coinjs_multisig").value = "0x35";
+			  document.getElementById("coinLogo").src = "images/logo/qbt.png";
+			  document.getElementById("bTtitle").textContent = "Cubits";
+			  document.getElementById("bTtitle1").textContent = "Cubits";
+			  tickerCode = "QBT";
+			}
+			else if (document.getElementById("customCoinName").value == "cure") {
+			  document.getElementById("coinjs_pub").value = "0x19";
+			  document.getElementById("coinjs_priv").value = "0x99";
+			  document.getElementById("coinjs_multisig").value = "0x1e";
+			  document.getElementById("coinLogo").src = "images/logo/cure.png";
+			  document.getElementById("bTtitle").textContent = "Curecoin";
+			  document.getElementById("bTtitle1").textContent = "Curecoin";
+			  tickerCode = "CURE";
+			}
+			else if (document.getElementById("customCoinName").value == "dal") {
+			  document.getElementById("coinjs_pub").value = "";
+			  document.getElementById("coinjs_priv").value = "";
+			  document.getElementById("coinjs_multisig").value = "";
+			  document.getElementById("coinLogo").src = "images/logo/dal.png";
+			  document.getElementById("bTtitle").textContent = "Dallar";
+			  document.getElementById("bTtitle1").textContent = "Dallar";
+			  tickerCode = "DAL";
+			}
+			else if (document.getElementById("customCoinName").value == "ked") {
+			  document.getElementById("coinjs_pub").value = "0x1e";
+			  document.getElementById("coinjs_priv").value = "0x9e";
+			  document.getElementById("coinjs_multisig").value = "0x8";
+			  document.getElementById("coinLogo").src = "images/logo/ked.png";
+			  document.getElementById("bTtitle").textContent = "Darsek";
+			  document.getElementById("bTtitle1").textContent = "Darsek";
+			  tickerCode = "KED";
+			}
+			else if (document.getElementById("customCoinName").value == "") {
+			  document.getElementById("coinjs_pub").value = "0x";
+			  document.getElementById("coinjs_priv").value = "0x";
+			  document.getElementById("coinjs_multisig").value = "0x";
+			  document.getElementById("coinLogo").src = "images/logo/.png";
+			  document.getElementById("bTtitle").textContent = "";
+			  document.getElementById("bTtitle1").textContent = "";
+			  tickerCode = "";
+			}
+			else if (document.getElementById("customCoinName").value == "data") {
+			  document.getElementById("coinjs_pub").value = "0x1e";
+			  document.getElementById("coinjs_priv").value = "0x9e";
+			  document.getElementById("coinjs_multisig").value = "0x5a";
+			  document.getElementById("coinLogo").src = "images/logo/data.png";
+			  document.getElementById("bTtitle").textContent = "Datacoin";
+			  document.getElementById("bTtitle1").textContent = "Datacoin";
+			  tickerCode = "DATA";
+			}
+			else if (document.getElementById("customCoinName").value == "d") {
+			  document.getElementById("coinjs_pub").value = "0x1e";
+			  document.getElementById("coinjs_priv").value = "0x9e";
+			  document.getElementById("coinjs_multisig").value = "0x5a";
+			  document.getElementById("coinLogo").src = "images/logo/d.png";
+			  document.getElementById("bTtitle").textContent = "Denarius";
+			  document.getElementById("bTtitle1").textContent = "Denarius";
+			  tickerCode = "D";
+			}
+			else if (document.getElementById("customCoinName").value == "dev") {
+			  document.getElementById("coinjs_pub").value = "0x81";
+			  document.getElementById("coinjs_priv").value = "0xef";
+			  document.getElementById("coinjs_multisig").value = "0xe";
+			  document.getElementById("coinLogo").src = "images/logo/dev.png";
+			  document.getElementById("bTtitle").textContent = "Deviantcoin";
+			  document.getElementById("bTtitle1").textContent = "Deviantcoin";
+			  tickerCode = "DEV";
+			}
+			else if (document.getElementById("customCoinName").value == "dmd") {
+			  document.getElementById("coinjs_pub").value = "0x5a";
+			  document.getElementById("coinjs_priv").value = "0xda";
+			  document.getElementById("coinjs_multisig").value = "0x59";
+			  document.getElementById("coinLogo").src = "images/logo/dmd.png";
+			  document.getElementById("bTtitle").textContent = "DigitalMoneyBits";
+			  document.getElementById("bTtitle1").textContent = "DigitalMoneyBits";
+			  tickerCode = "DMD";
+			}
+			else if (document.getElementById("customCoinName").value == "divi") {
+			  document.getElementById("coinjs_pub").value = "0x1e";
+			  document.getElementById("coinjs_priv").value = "0xd4";
+			  document.getElementById("coinjs_multisig").value = "0xd";
+			  document.getElementById("coinLogo").src = "images/logo/divi.png";
+			  document.getElementById("bTtitle").textContent = "Divicoin";
+			  document.getElementById("bTtitle1").textContent = "Divicoin";
+			  tickerCode = "DIVI";
+			}
+			else if (document.getElementById("customCoinName").value == "donu") {
+			  document.getElementById("coinjs_pub").value = "0x35";
+			  document.getElementById("coinjs_priv").value = "0xb1";
+			  document.getElementById("coinjs_multisig").value = "0x5";
+			  document.getElementById("coinLogo").src = "images/logo/donu.png";
+			  document.getElementById("bTtitle").textContent = "Donu";
+			  document.getElementById("bTtitle1").textContent = "Donu";
+			  tickerCode = "DONU";
+			}
+			else if (document.getElementById("customCoinName").value == "drz") {
+			  document.getElementById("coinjs_pub").value = "0xc";
+			  document.getElementById("coinjs_priv").value = "0x55";
+			  document.getElementById("coinjs_multisig").value = "0x8c";
+			  document.getElementById("coinLogo").src = "images/logo/drz.png";
+			  document.getElementById("bTtitle").textContent = "Droidz";
+			  document.getElementById("bTtitle1").textContent = "Droidz";
+			  tickerCode = "DRZ";
 			}
 		  else {
 				document.getElementById("xfeeTicker").textContent = document.getElementById("customCoinName").value
